# 1

big_tic_tac_toe1_player_to_com/: main.cpp
big_tic_tac_toe1_player_to_player/: main.cpp
big_tic_tac_toe1_result/: N = 50, depth = 2, number = 10.txt
line_mode/evolution/: CMakeLists.txt  main.cpp
line_mode/player_to_com/: CMakeLists.txt  main.cpp
line_mode/player_to_player/: CMakeLists.txt  main.cpp
line_mode/result/: N = 300, depth = 3, number = 10.txt  N = 50, depth = 3, number = 20.txt  rating-big-update-info.txt
line_mode/result/2/: info.txt
line_mode/result/3/: N = 120, group = 5 + 5, change = 40.txt  info.txt
line_mode/result/new/: 100 3 30 (1).txt  100 3 30 (2).txt  (+13 more)
line_mode/struct/: Evolution - groups.cpp  Game.cpp  Player.cpp  Table.cpp
run/: main.cpp  main1.cpp  main2.cpp
run/line_mode/: main - 100 3 (1).cpp  main - 100 3 (2).cpp  main - 60 6 (1).cpp  main - 60 6 (2).cpp  main - 60 6 (3).cpp  main - 60 6 (4).cpp  main - 80 5 (1).cpp  main - 80 5 (2).cpp  main - 80 5 (3).cpp  main - 80 5 (4).cpp
run/score_mode/: main - 150 6 (1).cpp  main - 150 6 (2).cpp  main - 150 6 (3).cpp  main - 150 6 (4).cpp  main - 200 3 (1).cpp  main - 200 3 (2).cpp  main - 200 3 (3).cpp  main - 200 3 (4).cpp
score_mode/111/: main.cpp
score_mode/big_tic_tac_toe2_player_to_player/: CMakeLists.txt  main.cpp
score_mode/player_to_com/: CMakeLists.txt  main.cpp
score_mode/player_to_player/: main.cpp
score_mode/result/: 150 6 20 (1).txt  150 6 20 (2).txt  200 3 20 (1).txt  200 3 20 (2).txt
score_mode/struct/: Evolution.cpp  Game.cpp  Player.cpp  Table.cpp
(+10 files in other folders)
